src/Jukebox/Jukebox.css
@font-face { font-family: LemonMilk; src: url('../Fonts/LemonMilk.otf'); }

.Jukebox {
    margin-top: 15px;
}

#backgroundImg {
    position: fixed;
    left: 0;
    right: 0;
    z-index: -1;
    
    display: block;
    background-image: url('https://e-cdns-images.dzcdn.net/images/cover/6f6a4d4ae7aab0cf0446c1b77835cef5/1000x1000-000000-80-0-0.jpg');
    width: 100%;
    height: 100%;
    transform: scale(1.5);
    
    -webkit-filter: blur(20px);
    -moz-filter: blur(20px);
    -o-filter: blur(20px);
    -ms-filter: blur(20px);
    filter: blur(20px);
}

body {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

h2 {
    font-family: LemonMilk;
    color: rgb(252,227,127);
    font-size: 30px;
}

img {
    width:50vh;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

button {
    padding: 15px 20px 15px 20px;
    margin-left: 10px;
    font-size: 16px;
    font-family: LemonMilk;
    font-weight: bold;
    color: black;
    border-color: rgb(252, 210, 127);
    background-color:rgb(252, 227,127);
}

